<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".RegistrationActivity">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_registration_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_registration_page"
        android:gravity="center"
        android:layout_marginTop="15sp"
        android:textSize="20sp"
        android:textColor="#03A9F4"
        android:textStyle="bold"
        android:fontFamily="serif" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            app:cardBackgroundColor="#0003A9F4"
            app:cardCornerRadius="16sp"
            app:cardElevation="16sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:orientation="vertical">

               <com.airbnb.lottie.LottieAnimationView
                   android:layout_width="180sp"
                   android:layout_height="170sp"
                   app:lottie_rawRes="@raw/registration"
                   android:layout_gravity="center"
                   android:layout_margin="16sp"
                   app:lottie_autoPlay="true"
                   app:lottie_loop="true"
                   />

                <TextView
                    android:id="@+id/new_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_marginTop="30sp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/new_registration"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/registration_icon" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/enter_your_name"
                    android:textColor="#0A7BD5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/name_icon" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/et_name_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/choose_gender"
                    android:textColor="#0A7BD5"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/male"
                        android:textColor="#0A7BD5"
                        android:textSize="16sp"
                        android:textStyle="italic|bold" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/female"
                        android:textColor="#0A7BD5"
                        android:textSize="16sp"
                        android:textStyle="bold|italic"
                        tools:ignore="VisualLintButtonSize" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tv_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/enter_your_phone_number"
                    android:textColor="#0A7BD5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/phone_icon" />

                <EditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/tv_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/enter_your_email_id"
                    android:textColor="#0A7BD5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/email_id_icon" />

                <EditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/enter_your_username"
                    android:textColor="#0A7BD5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/username_icon" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/enter_your_password"
                    android:textColor="#0A7BD5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/password_icon" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/tv_conform_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/conform_password"
                    android:textColor="#0A7BD5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/conform_password_icon" />

                <EditText
                    android:id="@+id/et_conform_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:fontFamily="sans-serif-condensed-medium"
                    android:hint="@string/et_conform_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="VisualLintTextFieldSize" />

                <CheckBox
                    android:id="@+id/cb_login_show_hide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:minHeight="48dp"
                    android:text="@string/show_password"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="VisualLintButtonSize" />


                <Button
                    android:id="@+id/register_button"
                    android:layout_width="150sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16sp"
                    android:layout_marginBottom="16sp"
                    android:backgroundTint="#8503A9F4"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>