<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyLocationActivity" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12sp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btn_map_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satellite"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="#5B03A9F4"
            android:fontFamily="sans-serif-condensed-medium" />

        <Button
            android:id="@+id/btn_map_terrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#5B03A9F4"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/terrain"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_map_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="#5B03A9F4"
            android:fontFamily="sans-serif-condensed-medium" />

        <Button
            android:id="@+id/btn_map_hybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hybrid"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="#5B03A9F4"
            android:fontFamily="sans-serif-condensed-medium" />

    </LinearLayout>

</RelativeLayout>